# pywgkey

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: cd.yml  ci-pr.yml  ci.yml  codeql-analysis.yml  pr.yml  python-package.yml  test.yml
docs/: conf.py  example.ipynb  index.md
pywgkey/: __init__.py  config.py  key.py  utils.py
src/pywgkey/: __init__.py  __main__.py  key.py  utils.py
tests/: test_cli.py  test_pywgkey.py
