[tool.poetry]
name = "pywgkey"
version = "0.1.0"
description = "A simple WireGuard key generator writen in python."
authors = ["polluxtroy3758 <2147396+polluxtroy3758@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/polluxtroy3758/pywgkey"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
