[tool.poetry]
name = "pywgkey"
version = "1.0.0"
description = "A simple WireGuard key generator writen in python."
authors = ["polluxtroy3758 <2147396+polluxtroy3758@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
include = ["tests/*", "CHANGELOG.md"]
repository = "https://github.com/polluxtroy3758/pywgkey"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.5.0"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
flake8 = "^4.0.1"
black = "^22.12.0"
pre-commit = "^2.21.0"
isort = "^5.12.0"
python-semantic-release = "^7.34.6"
pytest-cov = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-autoapi = "^1.9.0"
myst-nb = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src"

[tool.semantic_release]
version_variable = [
    "src/pywgkey/__init__.py:__version__",
    "pyproject.toml:version",
    "docs/conf.py:release"
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry install && poetry build"
dist_path = "dist/"
upload_to_pypi = true
remove_dist = false